--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <nav>
-        <div class="logo">SEND</div>
+        <div class="logo">
+            SEND
+        </div>
         <div class="nav-items">
             <a href="/">Home</a>"
             <a href="/">About</a>"
