--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Welcome to MegaRough</title>
-    <link reel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MegaRough Creators Union</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <nav>
-        <div class="logo">
-            SEND
-        </div>
+        <div class="logo">MegaRough</div>
         <div class="nav-items">
-            <a href="/">Home</a>"
-            <a href="/">About</a>"
-            <a href="/">Contact</a>"
+            <a href="/">Home</a>
+            <a href="/">Gallery</a>
+            <a href="/">Links</a>
+            <a href="/">About</a>
         </div>
     </nav>
-    <section class="hero">
-        <div class="hero-container">
+    <section class="main">
+        <div class="main-container">
             <div class="column-left">
-                <h1>Send Unlimited Messages</h1>
-                <p>No contracts or unwanted fees. Exclusive offer for new customers only.</p>
-                <button>Get Started</button>
-            </div>
-            <div class="column-right">
-                <img src="./mr_image.svg" alt="illustration"
-                class="hero-image">
+                <h1>Welcome to MegaRough!</h1>
+                <p>MegaRough is going to be an independently-run multimedia distribution company. This company will officially be established in 2026. Assisstance is accepted. Becoming a member of my community is also accepted.</p>
+                <p>-Apro Apri</p>
+                <button>Become Member</button>
+                <p>This button doesn't work yet</p>
             </div>
         </div>
     </section>
