--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav-items">
             <a href="/">Home</a>
             <a href="/">Gallery</a>
-            <a href="/">Links</a>
+            <a href="/Links/index.html">Links</a>
             <a href="/">About</a>
         </div>
     </nav>
