--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MegaRough Creators Union</title>
+    <title>Some Cluttered Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,11 +19,7 @@
     <section class="main">
         <div class="main-container">
             <div class="column-left">
-                <h1>Welcome to MegaRough!</h1>
-                <p>MegaRough is going to be an independently-run multimedia distribution company. This company will officially be established in 2026. Assisstance is accepted. Becoming a member of my community is also accepted.</p>
-                <p>-Apro Apri</p>
-                <button>Become Member</button>
-                <p>This button doesn't work yet</p>
+                <h1>This is a gallery of some of my digital art.</h1>
             </div>
         </div>
     </section>
