--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>Welcome to MegaRough!</h1>
                 <p>MegaRough is going to be an independently-run multimedia distribution company. This company will officially be established in 2026. Assisstance is accepted. Becoming a member of my community is also accepted.</p>
                 <p>-Apro Apri</p>
-                <button>Become Member</button>
+                <button href="https://ash1723.github.io/apronius">Apronius Aprium</button>
                 <p>This button doesn't work yet</p>
             </div>
         </div>
