--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MegaRough Creators Union</title>
-    <link rel="stylesheet" type=text/css href="style.css">
+    <link rel="stylesheet" type=text/css href="style1.css">
 </head>
 <body>
     <nav>
@@ -22,8 +22,8 @@
                 <h1>Welcome to MegaRough!</h1>
                 <p>MegaRough is going to be an independently-run multimedia distribution company. This company will officially be established in 2026. Assisstance is accepted. Becoming a member of my community is also accepted.</p>
                 <p>-Apro Apri</p>
-                <button href="https://ash1723.github.io/apronius">Apronius Aprium</button>
-                <p>This button doesn't work yet</p>
+                <button type="submit">Apronius Aprium</button>
+                <a href="ash1723.github.io/apronius">This button doesn't work yet</p>
             </div>
         </div>
     </section>
