--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>MegaRough is going to be an independently-run multimedia distribution company. This company will officially be established in 2026. Assisstance is accepted. Becoming a member of my community is also accepted.</p>
                 <p>-Apro Apri</p>
                 <button type="submit">Apronius Aprium</button>
-                <a href="ash1723.github.io/apronius">This button doesn't work yet</p>
+                <p>This button doesn't work yet</p>
             </div>
         </div>
     </section>
