--- a/index.html
+++ b/index.html
@@ -23,7 +23,32 @@
                 <p>MegaRough is going to be an independently-run multimedia distribution company. This company will officially be established in 2026. Assisstance is accepted. Becoming a member of my community is also accepted.</p>
                 <p>-Apro Apri</p>
                 <button type="submit">Apronius Aprium</button>
-                <p>This button doesn't work yet</p>
+                <p><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MegaRough Creators Union</title>
+    <link rel="stylesheet" type=text/css href="style1.css">
+</head>
+<body>
+    <nav>
+        <div class="logo">MegaRough</div>
+        <div class="nav-items">
+            <a href="index.html">Home</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="links.html">Links</a>
+            <a href="about.html">About</a>
+        </div>
+    </nav>
+    <section class="main">
+        <div class="main-container">
+            <div class="column-left">
+                <h1>Welcome to MegaRough!</h1>
+                <p>MegaRough is going to be an independently-run multimedia distribution company. This company will officially be established in 2026. Assisstance is accepted. Becoming a member of my community is also accepted.</p>
+                <p>-Apro Apri</p>
+                <button type="submit">Apronius Aprium</button>
+                <p>ash1723.github.io/apronius</p>
             </div>
         </div>
     </section>
